tests/__snapshots__/validation-plugins-path-does-not-exist-stderr.snap.txt
Error: The specified path '/Users/mrazauskas/Projects/tstyche/tests/__fixtures__/.generated/validation-plugins/not-plugin.js' does not exist.

  2 |   "plugins": [
  3 |     "./tstyche-plugin.js",
  4 |     "./not-plugin.js"
    |     ~~~~~~~~~~~~~~~~~
  5 |   ],
  6 |   "testFileMatch": [
  7 |     "examples/*.tst.*"

      at ./tstyche.config.json:4:5

